--- a/Register/Views/Person/PersonList.cshtml
+++ b/Register/Views/Person/PersonList.cshtml
@@ -7,7 +7,7 @@
 <h1>PersonList</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddPerson" class="btn btn-outline-success">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -55,7 +55,7 @@
                 @Html.DisplayFor(modelItem => item.IsActive)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.PersonId">Edit</a> |
+                    <a asp-action="EditPerson" asp-route-PersonId="@item.PersonId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.PersonId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.PersonId">Delete</a>
             </td>
