--- a/Register/Views/Person/PersonList.cshtml
+++ b/Register/Views/Person/PersonList.cshtml
@@ -56,8 +56,8 @@
             </td>
             <td>
                     <a asp-action="EditPerson" asp-route-PersonId="@item.PersonId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PersonId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PersonId">Delete</a>
+                <a asp-action="PersonInfo" asp-route-PersonId="@item.PersonId">Details</a> |
+                <a asp-action="DeletePerson" asp-route-PersonId="@item.PersonId">Delete</a>
             </td>
         </tr>
 }
