--- a/Register/Views/Person/AddPerson.cshtml
+++ b/Register/Views/Person/AddPerson.cshtml
@@ -49,6 +49,7 @@
             </div>
         <div class="form-group col-md-4 mt-2">
             <input type="submit" value="Create" class="btn btn-primary" />
+            <input type="reset" value="Clear" class="btn btn-info" />
             <a asp-action="PersonList" class="btn btn-outline-dark">Back to List</a>
 
         </div>
@@ -56,5 +57,9 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}   
+    @{
+        @await Component.InvokeAsync("Notyf");}
 }
+
+
