--- a/Register/Views/Shared/_Layout.cshtml
+++ b/Register/Views/Shared/_Layout.cshtml
@@ -25,6 +25,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                Person</a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="~/Person/PersonList">Person List</a>
+                                        <a class="dropdown-item" href="~/Person/AddPerson">Add Person</a>
+                                    </div>
+                        </li>
                     </ul>
                 </div>
             </div>
